# yappod

./: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in
src/: Makefile.am  Makefile.in  search.c  yappo_alloc.c  yappo_alloc.h  yappo_db.c  yappo_db.h  yappo_index.c  yappo_index.h  yappo_index_deletefile.c  yappo_index_deletefile.h  yappo_index_filedata.c  yappo_index_filedata.h  yappo_index_pos.c  yappo_index_pos.h  yappo_linklist.c  yappo_linklist.h  yappo_makeindex.c  yappo_margepos.c  yappo_minibtree.c  yappo_minibtree.h  yappo_ngram.c  yappo_ngram.h  yappo_search.c  yappo_search.h  yappod_core.c  yappod_front.c
