# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)
AC_INIT([yappod],[1.0.0_free],[ko@yappo.ne.jp])
AC_REVISION($Rev$)
AM_MAINTAINER_MODE

PACKAGE=yappod
VERSION=1.0.0_free
AM_INIT_AUTOMAKE( $PACKAGE, $VERSION, no-dependencies)


AC_CONFIG_SRCDIR([src/search.c])
AM_CONFIG_HEADER([config.h])

AC_PREFIX_DEFAULT(/usr/local/yappod)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ldb':
AC_CHECK_LIB([db], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lz':
AC_CHECK_LIB([z], [main])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([gethostbyname memset socket])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
